--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: Andrea Bertran
 title: ANDREA BERTRAN
 description: >
   Hi! I'm Andrea a Creative Technologist and Architect.
-url: https://andreabertran.netlify.app/
+url: https://andreabertran.netlify.app
 twitter_username:
 default_img: /assets/images/seo.jpg
 social:
