--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ social:
 
 
 # Contact settings
-contact_img: /assets/images/phygital.jpg
+contact_img: 
 formcarry: bertran.andrea@gmail.com
 
 # # Disqus settings
